structure for css

--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,26 @@
 /* FOR GENERAL STYLING ON THE APP THAT CONTAINS ALL THE REST OF PAGES AND COMPONENTS */
+
+
+/* SECTIONS */
+/* HERO */
+
+
+
+
+
+/* DESCRIPTION */
+
+
+/*  */
+
+
+/*  */
+
+
+/*  */
+
+
+/*  */
+
+
+/*  */
