--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@
 }
 body {
     font-family: 'Roboto-Normal', sans-serif;
-    letter-spacing: 0.5px;
+    /* letter-spacing: 0.5px; */
     
     overflow-x: hidden;
 }
@@ -82,5 +82,15 @@ a, a:hover, a:focus, a:active{
 .section-flex {
     display: flex;
     margin-inline: 6rem;
-    margin-top: 2rem; margin-bottom: 2rem;
+    margin-top: 5rem; margin-bottom: 2rem;
+}
+.section-grid {
+    display: grid;
+    margin-inline: 6rem;
+    margin-top: 5rem; margin-bottom: 2rem;
+}
+
+
+.align-justify {
+    text-align: justify;
 }
